--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -76,7 +76,7 @@ header h1 {
   }
 }
 
-
+/* 
 header h1:before {
   content: "./ ";
   font-size: 24px;
@@ -93,6 +93,7 @@ header h2 {
   text-align: center;
   margin: 0;
 }
+*/
 
 /* Main Content
 */
