--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,8 @@
     <div class="container">
       <section id="main_content">
         {{ content }}
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FElectronicSportsInfinityGames%2Fposts%2F133469165703300&width=500&show_text=true&appId=207966257770529&height=498" width="500" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        <h3 id="torneo-de-halloween">Torneo de Halloween</h3>
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FElectronicSportsInfinityGames%2Fposts%2F133469165703300&width=500&show_text=true&appId=207966257770529&height=498" width="450" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
       </section>
     </div>
   </body>
