--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,9 @@
       <section id="main_content">
         {{ content }}
         <h3 id="torneo-de-halloween">Torneo de Halloween</h3>
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FElectronicSportsInfinityGames%2Fposts%2F133469165703300&width=500&show_text=true&appId=207966257770529&height=498" width="450" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FElectronicSportsInfinityGames%2Fposts%2F133469165703300&width=500&show_text=true&appId=207966257770529&height=498" width="430" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Comentario final: Queremos que cada torneo sea una experiencia que todos puedan recordar y disfrutar. Sin embargo, prohibimos muchas actitudes que pueden ser dañinas. ¡IMPORTANTE! Al entrar al Torneo aceptan las reglas y normas del administrador en curso. Si no aceptas o no estás de acuerdo con la misma, estas en tu derecho de no participar.</code></pre></div></div>
+
       </section>
     </div>
   </body>
