--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FElectronicSportsInfinityGames%2Fposts%2F133469165703300&width=500&show_text=true&appId=207966257770529&height=498" width="370" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Comentario final: Queremos que cada torneo sea una experiencia que todos puedan recordar y disfrutar. Sin embargo, prohibimos muchas actitudes que pueden ser dañinas. ¡IMPORTANTE! Al entrar al Torneo aceptan las reglas y normas del administrador en curso. Si no aceptas o no estás de acuerdo con la misma, estas en tu derecho de no participar.</code></pre></div></div>
 
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTjqAaUULtV8O8AM7Dng45wNCRrvSeJBqYlz74qmuG6m_B0pKqzU1LL5xa0kQwQee4pREWfxwZw1bsJ/pubhtml?gid=1687094877&amp;single=true&amp;widget=true&amp;headers=false"></iframe>       
       </section>
     </div>
   </body>
