--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          <a href="https://www.facebook.com/ElectronicSportsInfinityGames" class="btn btn-github"><span class="icon"></span>Visitanos en Facebook</a>
+          <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTjqAaUULtV8O8AM7Dng45wNCRrvSeJBqYlz74qmuG6m_B0pKqzU1LL5xa0kQwQee4pREWfxwZw1bsJ/pubhtml?gid=1687094877&single=true" class="btn btn-github"><span class="icon"></span>Revisa la tabla de finalistas en directo</a>
         </section>
       </div>
     </header>
